Expounded upon logistic regression performance metrics interpretation.

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -645,12 +645,12 @@
     "#### 4 – Analysis\n",
     "The fundamental question is: _How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?_\n",
     "\n",
-    "It seems that our model has high accuracy overall, which might initially lead us to believe that the model is quite good at its credit classification task. \n",
+    "It seems that our model has high accuracy overall, which might initially lead us to believe that it is quite adept at its credit classification task.\n",
     "\n",
-    "Digging into classwise precision and recall, however, we get a different picture altogether. While high precision and recall scores on the healthy loan class indicate that the model accurately predicts healthy loans, we find that its performance on risky loans is lower, at 0.84 precision and 0.98 recall.\n",
+    "Digging into classwise precision and recall, however, we see a different picture altogether. While high precision and recall scores on the healthy loan class indicate that the model accurately predicts healthy loans, we find that its performance on risky loans is lower, at 0.84 precision and 0.98 recall.\n",
     "\n",
-    "At this point, it is important to note that:\n",
-    "    - "
+    "What does this mean more precisely? Well, let's dig into the respective definitions of those terms:\n",
+    "- $\\text{Recall} = \\frac{\\text{True Positive}}{\\text{True Positive} + \\text{False Negative}}$"
    ]
   },
   {
