Completed model analysis and report write-up in README.

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -869,7 +869,9 @@
     "\n",
     "The fundamental question is: _How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?_\n",
     "\n",
-    "Interestingly, the overall performance of our model seems to have improved slightly, while precision with respect to high-risk loans has decreased. I think that in this instance, it may be justified to say that our model is a better performer in this instance because we have flagged more credit risk cases than we did with the model trained only on our original data set. If, however, it is not fiscally irresponsible to accept the error rate produced by our previous model, the firm may stand to generate more income with the previous iteration of our model."
+    "Interestingly, the overall performance of our model seems to have improved slightly, while precision with respect to high-risk loans has decreased.\n",
+    "\n",
+    "In this instance, it may be justified to say that v2 of our model is a better performer because we have flagged more credit risk cases than we did with the model trained only on our original data set. If the firm is concerned with eliminating issuance of risky loans altogether, neither model is sufficient. If the firm is interested in minimizing issuance of risky loans and reducing the need for human oversight of credit application screenings to mitigate human resource costs, v2 of our model may be the best solution to implement. If, however, it is not fiscally irresponsible to accept the error rate produced by our previous model, the firm may stand to generate more income with v1 of our model because it does not screen out as many qualified applicants (the firm failed to issue 12 additional loans to qualified applicants on the basis of model error in v2 compared with v1)."
    ]
   }
  ],
